New entry, typo

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
   {% if page.previous and page.previous.categories == page.categories %}
     <a href="{{ page.previous.url }}">&lt;-- {{page.previous.title}}</a>
   {% else %}
-    x-- It all began here
+    x-- In the beginning the universe was created
   {% endif %}
 
   |
@@ -32,7 +32,7 @@ layout: default
   {% if page.previous and page.previous.categories == page.categories %}
     <a href="{{ page.previous.url }}">&lt;-- {{page.previous.title}}</a>
   {% else %}
-    x-- It all began here
+    x-- In the beginning the universe was created
   {% endif %}
 
   |
